Added Bochi's pages, added sourcing, database purge

--- a/html/templates/DataMining.html
+++ b/html/templates/DataMining.html
@@ -65,6 +65,7 @@
                 how one or more variables might impact the dependent variable, in order to identify trends and patterns.
                 This is especially used for making predictions and forecasting future trends.</p>
 
+            <small>Source: <a target="_blank" href="https://www.precisely.com/blog/datagovernance/top-5-data-mining-techniques?utm_medium=Redirect-Infogix&utm_source=Direct-Traffic">Precisely: Data Mining Techniques</a></small>
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
