--- a/html/templates/MachineLearning.html
+++ b/html/templates/MachineLearning.html
@@ -51,7 +51,7 @@
                 <li>Ordinal</li>
             </ul>
 
-            <p><strong>Numerical</strong> data are numbers and can be split in to two categories: discrete data or
+            <p><strong>Numerical</strong> data, as the name suggests, is data consisting of numbers, which can be categorized as either discrete data or
                 continuous data</p>
             <ul>
                 <li>discrete data - a numerical data type with countable elements, represented as real numbers. ex.
@@ -62,14 +62,15 @@
                 </li>
             </ul>
 
-            <p><strong>Categorical</strong> data is data that cannot be measured against each other and are classified
-                by categories and aliases, eg. colors, yes/no values</p>
+            <p>"<strong>Categorical</strong> data is data that cannot be measured against each other and are classified
+                by categories and aliases, eg. colors, yes/no values"<small>[1]</small></p>
             <p><strong>Ordinal</strong> data is similar to categorical data, but it differs in that this data <i>is</i>
                 measurable against itself. eg. school letter grades</p>
 
             <p>Knowing the type of dataset you are working with will heavily impact your application's ability to
-                "learn" new techniques
-                for processing your data.</p>
+                "learn" new techniques for processing your data.</p>
+
+            <small>Source: [1] <a target="_blank" href="https://www.w3schools.com/python/python_ml_getting_started.asp">W3Schools - Machine Learning</a></small>
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
