--- a/html/templates/PredictiveModeling.html
+++ b/html/templates/PredictiveModeling.html
@@ -63,6 +63,7 @@
             <p>This model is a a series of data points ordered in time. Time is usually an independent variable, and a chosen metric is compared over time.
                 It's usually seeking to make a forecast for the future. ex. graphs that predict the future spread of Covid-19 over time.</p>
 
+            <small>Source: <a target="_blank" href="https://www.logianalytics.com/predictive-analytics/predictive-algorithms-and-models/">Top 5 Predictive Analytics Models and Algorithms</a></small>
 
         </div>
 
