--- a/html/templates/keras.html
+++ b/html/templates/keras.html
@@ -28,6 +28,8 @@
                 activation functions, optimizers, and a host of tools to make working with image and text data easier to simplify the coding
                 necessary for writing deep neural network code.</p>
 
+            <small>Source: <a target="_blank" href="https://keras.io/about">About Keras</a></small>
+
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
@@ -49,7 +51,7 @@
                              data-parent="#accordionGuide-links">
                             <div class="card-body">
                                 <div class="description">
-                                    <a target="_blank" href="https://docs.scipy.org/doc/scipy/reference/tutorial/general.html">Link</a>
+                                    <a target="_blank" href="https://keras.io/about/">Link</a>
                                     <p><strong>Description</strong><br></p>
                                     <p>Official home page on Keras library.</p>
                                 </div>
