--- a/html/templates/numpy.html
+++ b/html/templates/numpy.html
@@ -53,15 +53,19 @@
             </pre>
 
             <br>
-            <p>NumPy’s main object is the homogeneous multidimensional array. It is a table of elements (usually numbers),
-                all of the same type, indexed by a tuple of non-negative integers. This differs from Python lists in that
+            <p>NumPy uses a multidimensional array (has to be of all the same datatype) as its main object, which is a table of elements (usually numbers),
+                indexed by a tuple of non-negative integers. This differs from Python lists in that
                 lists can contain items of different data types in the list, while the items in arrays used by the NumPy library <i>must</i> be of the same type.
-                In NumPy, dimensions are called axes.</p>
+                These dimensions are referred to as axes in NumPy. <small>[1]</small></p>
 
             <p>The benefit of these arrays is that they can be sliced, indexed, and iterated over either a portion or the entirety of
                 the array. What this allows for is robust data manipulation and the ability for the programmer to transform the data in multiple different variations and
-                produce a wide variety of end results.</p>
+                produce a wide variety of end results. <small>[2]</small></p>
+
+            <small>Source: [1] <a target="_blank" href="https://numpy.org/doc/stable/user/quickstart.html">NumPy - QuickStart</a></small>
+            <br/><small>Source: [2] <a target="_blank" href="https://www.geeksforgeeks.org/python-numpy">Geeks for Geeks - Python NumPy</a></small>
         </div>
+
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
 
@@ -82,11 +86,10 @@
                         <div class="card-body">
                             <div class="description">
                                 <a target="_blank"
-                                   href="https://www.geeksforgeeks.org/python-for-data-science/">Link</a>
+                                   href="https://numpy.org/">Link</a>
                                 <p><strong>Description</strong><br></p>
                                 <p>Official documentation on NumPy library. There are a number of useful resources like
-                                    how-tos,
-                                    tutorials, glossaries, etc, on the library at this web resource.</p>
+                                    how-tos, tutorials, glossaries, etc, on the library at this web resource.</p>
                             </div>
                         </div>
                     </div>
