--- a/html/templates/plotly.html
+++ b/html/templates/plotly.html
@@ -41,7 +41,7 @@
         <p>The Plotly Python library (referred to as plotly.py to differentiate between language-specific versions)
             was built on top of plotly.js; the advantage of this is that this gives great versatility to display web-based
             visualizations in Jupyter notebooks, incorporated into Python web applications using Dash, or saved
-            to standalone HTML files.</p>
+            to standalone HTML files. <small>[1]</small></p>
 
 
         <p>To install the Plotly.py library, install onto your version of Python from command line using the following command:</p>
@@ -55,6 +55,8 @@
                 </code>
             </pre><br>
         </div>
+
+        <small>Source: [1] <a target="_blank" href="https://plotly.com/python/getting-started">Plotly - Getting Started with Plotly in Python</a></small>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
 
