--- a/html/templates/pydot.html
+++ b/html/templates/pydot.html
@@ -23,9 +23,9 @@
     <div class="tab-content" id="pills-tabContent">
         <div class="tab-pane fade show active" id="pills-description" role="tabpanel"
              aria-labelledby="pills-description-tab">
-            <p>Pydot is a Python library, also written in Python, that serves as a graphical interface to Graphviz,
+            <p>Pydot is a Python library, also written in Python, that "serves as a graphical interface to Graphviz,
                 an open source graph visualization software. GraphViz is written in DOT language, but Pydot provides the ability
-                to parse and dump data, between Python and DOT.</p>
+                to parse and dump data, between Python and DOT."<small>[1]</small></p>
 
             <p>To install the Pydot library, install onto your version of Python from command line using the following command:</p>
 
@@ -45,6 +45,8 @@
             <p>In 2014, the developers improved upon the module and re-released it as a new library called PyDotPlus, which mainly improved upon the
                 original library's parsing ability between Python and DOT. However, PyDotPlus should be thought of as an alternative rather than a
                 replacement for Pydot as the original Pydot library continues to be updated upon, even as recently as February 2021.</p>
+
+            <small>Source: [1] <a target="_blank" href="https://pypi.org/project/pydot/">PyDot - PyPIy</a></small>
 
         </div>
 
