--- a/html/templates/pytorch.html
+++ b/html/templates/pytorch.html
@@ -53,6 +53,8 @@
                 </code>
             </pre>
 
+            <br/><small>Source: <a target="_blank" href="https://www.tutorialspoint.com/pytorch/pytorch_quick_guide.htm">TutorialsPoint - PyTorch Quick Guide</a></small>
+
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
