--- a/html/templates/scipy.html
+++ b/html/templates/scipy.html
@@ -74,6 +74,8 @@
             <br>
             <p></p>
 
+            <small>Source: <a target="_blank" href=" https://docs.scipy.org/doc/scipy/reference/tutorial/general.html">Introduction - SciPy</a></small>
+
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
