--- a/html/templates/seaborn.html
+++ b/html/templates/seaborn.html
@@ -94,8 +94,11 @@
                     </script>
                 </code>
             </pre><br>
-            
+
+            <br>
             <img src="/html/templates/resources/seaborn_graph.jpg" alt="graph built using the Matplotlib library in conjunction with Seaborn">
+
+            <small>Photos and Code Source: <a target="_blank" href="https://www.tutorialspoint.com/seaborn/seaborn_figure_aesthetic.htm">TutorialsPoint: Seaborn - Figure Aesthetic</a></small>
 
 
         </div>
