--- a/html/templates/tensorflow.html
+++ b/html/templates/tensorflow.html
@@ -54,6 +54,8 @@
                 </code>
             </pre>
 
+            <br/><small>Source: <a target="_blank" href="https://www.tensorflow.org/tutorials/quickstart/beginner">TensorFlow Core - Quickstart for Beginners</a></small>
+
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
@@ -78,31 +80,6 @@
                                 <a target="_blank" href="https://www.tensorflow.org/learn">Link</a>
                                 <p><strong>Description</strong><br></p>
                                 <p>Introduction to the TensorFlow library and ecosystem.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="card">
-                    <div class="card-header" id="headingTwo">
-                        <h5 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse"
-                                    data-target="#collapseTwo"
-                                    aria-expanded="false" aria-controls="collapseTwo">
-                                Tutorials Point - PyTorch Tutorial
-                            </button>
-                        </h5>
-                    </div>
-
-                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
-                         data-parent="#accordionGuide-links">
-                        <div class="card-body">
-                            <div class="description">
-                                <a target="_blank"
-                                   href="https://www.tutorialspoint.com/pytorch/index.htm">Link</a>
-                                <p><strong>Description</strong><br></p>
-                                <p>An online PyTorch tutorial</p>
                             </div>
                         </div>
                     </div>
