--- a/html/templates/base.html
+++ b/html/templates/base.html
@@ -73,35 +73,35 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="pageSubmenu">
                     <li class="active">
-                        <a href="#">Data Frame</a>
+                        <a href="{{ url_for('dataframe') }}">Data Frame</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Descriptive Statistics</a>
+                        <a href="{{ url_for('descriptive_statistics') }}">Descriptive Statistics</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Histograms</a>
+                        <a href="{{ url_for('histograms') }}">Histograms</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Scatter plots</a>
+                        <a href="{{ url_for('scatterplots') }}">Scatter plots</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Coefficient of Variance</a>
+                        <a href="{{ url_for('coefficient_of_variance') }}">Coefficient of Variance</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Standard Deviation</a>
+                        <a href="{{ url_for('standard_deviation') }}">Standard Deviation</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Missing Data</a>
+                        <a href="{{ url_for('missing_data') }}">Missing Data</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Outliers</a>
+                        <a href="{{ url_for('outliers') }}">Outliers</a>
                     </li>
                 </ul>
             </li>
@@ -111,35 +111,35 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="dataSubmenu">
                     <li class="active">
-                        <a href="#">Correlations</a>
+                        <a href="{{ url_for('corr') }}">Correlations</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Aggregation</a>
+                        <a href="{{ url_for('aggr') }}">Aggregation</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Ranking</a>
+                        <a href="{{ url_for('rank') }}">Ranking</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">TimeSeries</a>
+                        <a href="{{ url_for('time') }}">TimeSeries</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Maps</a>
+                        <a href="{{ url_for('mmap') }}">Maps</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Flow or Neural Networks</a>
+                        <a href="{{ url_for('flow') }}">Flow or Neural Networks</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Regressions</a>
+                        <a href="{{ url_for('regr') }}">Regressions</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">SEM</a>
+                        <a href="{{ url_for('sem') }}">SEM</a>
                     </li>
                 </ul>
             </li>
@@ -148,61 +148,69 @@
                 <a href="#visualSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Visualizations</a>
                 <ul class="collapse list-unstyled" id="visualSubmenu">
                     <li class="active">
-                        <a href="#">Mathplotlib</a>
+                        <a href="{{ url_for('mathplotlib')}}">Mathplotlib</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Seaborn</a>
+                        <a href=" {{ url_for('seaborn') }}">Seaborn</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Bokeh</a>
+                        <a href="{{ url_for('bokeh')}}">Bokeh</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Plotly</a>
+                        <a href="{{ url_for('plotly')}}">Plotly</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">pydot</a>
+                        <a href="{{ url_for('pydot')}}">pydot</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">D3</a>
+                        <a href="{{ url_for('d3')}}">D3</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Charts</a>
+                        <a href="{{ url_for('charts')}}">Charts</a>
                     </li>
                 </ul>
             </li>
 
             <li class="active">
-                <a href="#bisSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Business
+                <a href="#dataSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Data
                     Analysis</a>
-                <ul class="collapse list-unstyled" id="bisSubmenu">
+                <ul class="collapse list-unstyled" id="dataSubmenu">
                     <li class="active">
-                        <a href="#">Customer</a>
+                        <a href="{{ url_for('corr') }}">Correlations</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Social Media</a>
+                        <a href="{{ url_for('aggr') }}">Aggregation</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Cost Analysis</a>
+                        <a href="{{ url_for('rank') }}">Ranking</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Production Analysis</a>
+                        <a href="{{ url_for('time') }}">TimeSeries</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Quality Analysis</a>
+                        <a href="{{ url_for('mmap') }}">Maps</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Market Analysis</a>
+                        <a href="{{ url_for('flow') }}">Flow or Neural Networks</a>
+                    </li>
+
+                    <li class="active">
+                        <a href="{{ url_for('regr') }}">Regressions</a>
+                    </li>
+
+                    <li class="active">
+                        <a href="{{ url_for('sem') }}">SEM</a>
                     </li>
                 </ul>
             </li>
@@ -212,15 +220,15 @@
                     Analysis</a>
                 <ul class="collapse list-unstyled" id="preSubmenu">
                     <li class="active">
-                        <a href="#">Data Mining</a>
+                        <a href="{{ url_for('data_mining')}}">Data Mining</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Predictive Modelling</a>
+                        <a href="{{ url_for('predictive_modeling')}}">Predictive Modelling</a>
                     </li>
 
                     <li class="active">
-                        <a href="#">Machine Learning</a>
+                        <a href="{{ url_for('machine_learning')}}">Machine Learning</a>
                     </li>
                 </ul>
             </li>
@@ -367,6 +375,10 @@
 
                         <li class="nav-item active">
                             <a class="nav-link" href="{{ url_for('clusters')}}">Clusters</a>
+                        </li>
+
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ url_for('jupyter')}}">Jupyter Notebook</a>
                         </li>
                     </ul>
                 </div>
