--- a/html/templates/scikitlearn.html
+++ b/html/templates/scikitlearn.html
@@ -55,6 +55,8 @@
                 </code>
             </pre>
 
+            <br/><small>Source: <a target="_blank" href="https://www.datacamp.com/community/tutorials/machine-learning-python">Python Machine Learning: Scikit-Learn Tutorial</a></small>
+
         </div>
 
         <div class="tab-pane fade" id="pills-links" role="tabpanel" aria-labelledby="pills-links-tab">
